--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=backend
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/imc
+spring.datasource.username=root
+spring.datasource.password=Oneservice1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+#Scripts SQL de démarrage (si tu en mets dans src/main/resources)
+spring.sql.init.mode=always
+
+# Logging
+logging.level.root=INFO
